updating some content, improving media print rendering

--- a/src/assets/json/i18n/fr.json
+++ b/src/assets/json/i18n/fr.json
@@ -6,7 +6,8 @@
         "SKILLS": "Compétences",
         "DIPLOMAS": "Diplômes",
         "SPOKEN_LANGUAGES": "Langues",
-        "CERTIFICATIONS": "Certifications"
+        "CERTIFICATIONS": "Certifications",
+        "HOBBIES": "Hobbies"
     },
     "EXPERIENCES": {
         "TITLE": "Expériences",
