--- a/src/assets/json/i18n/fr.json
+++ b/src/assets/json/i18n/fr.json
@@ -13,7 +13,7 @@
         "TITLE": "Expériences",
         "STRENGTHS": "Points forts des projets",
         "PROJECTS": "Projets",
-        "ENVIRONMENT_HIGHLIGHTS": "Environnements",
+        "ENVIRONMENT_HIGHLIGHTS": "Environnement",
         "TASKS": "Tâches"
     },
     "COMMONS": {
